option('with_rtable', type: 'combo', value: 'cidr', choices: ['cidr', 'static'], description: 'Select routing table')

option('use_rdp', type: 'boolean', value: true, description: 'Reliable Datagram Protocol')
option('use_crc32', type: 'boolean', value: true, description: 'Cyclic redundancy check')
option('use_hmac', type: 'boolean', value: true, description: 'Hash-based message authentication code')
option('use_xtea', type: 'boolean', value: true, description: 'eXtended TEA block cipher')
option('use_promisc', type: 'boolean', value: true, description: 'Promiscious mode')
option('use_dedup', type: 'boolean', value: true, description: 'Packet deduplication')
option('enable_python3_bindings', type: 'boolean', value: true, description: 'Build Python 3 binding')

option('version', type: 'integer', value: 1, description: 'Which version of CSP to use.')
option('packet_padding_bytes', type: 'integer', value: 8, description: 'Number of bytes to include before the packet data (must be minimum 8)')

option('log-level', type: 'combo', choices: ['none', 'error', 'warning', 'info', 'debug'], value: 'debug', description: 'Select debug log level')


# Memory tuning parameters:
# Try to balance these so there is enough memory to handle expected system usage plus some,
# while avoiding over-allocating too much memory, that would be better used elsewhere
option('qfifo_len', type: 'integer', value: 15, description: 'Length of incoming queue for router task')
option('port_max_bind', type: 'integer', value: 16, description: 'Length of incoming queue for router task')
option('conn_rxqueue_len', type: 'integer', value: 15, description: 'Number of packets in connection queue')
option('conn_max', type: 'integer', value: 8, description: 'Number of new connections on socket queue')
option('buffer_size', type: 'integer', value: 256, description: 'Bytes in each packet buffer')
option('buffer_count', type: 'integer', value: 15, description: 'Number of total packet buffers')
option('rdp_max_window', type: 'integer', value: 5, description: 'Max window size for RDP')
option('rtable_size', type: 'integer', value: 10, description: 'Number of elements in routing table')
