option('enable_reproducible_builds', type: 'boolean', value: false, description: 'Enable reproducible builds')

option('use_rdp', type: 'boolean', value: true, description: 'Reliable Datagram Protocol')
option('use_crc32', type: 'boolean', value: true, description: 'Cyclic redundancy check')
option('use_hmac', type: 'boolean', value: true, description: 'Hash-based message authentication code')
option('use_promisc', type: 'boolean', value: true, description: 'Promiscious mode')
option('use_dedup', type: 'boolean', value: true, description: 'Packet deduplication')
option('enable_python3_bindings', type: 'boolean', value: false, description: 'Build Python 3 binding')

option('version', type: 'integer', value: 1, description: 'Which version of CSP to use.')
option('packet_padding_bytes', type: 'integer', value: 8, description: 'Number of bytes to include before the packet data (must be minimum 8)')
option('enable_csp_print', type: 'boolean', value: true, description: 'Enable csp_print()')
option('have_stdio', type: 'boolean', value: true, description: 'Use print and scan functions (some features may be missing without)')
option('use_rtable', type: 'boolean', value: false, description: 'Allows to setup a list of static routes. End nodes do not need this. But radios and routers might')
option('print_stdio', type: 'boolean', value: true, description: 'Use vprintf for csp_print_func')

# Memory tuning parameters:
# Try to balance these so there is enough memory to handle expected system usage plus some,
# while avoiding over-allocating too much memory, that would be better used elsewhere
option('qfifo_len', type: 'integer', value: 15, description: 'Length of incoming queue for router task')
option('port_max_bind', type: 'integer', value: 16, description: 'Length of incoming queue for router task')
option('conn_rxqueue_len', type: 'integer', value: 15, description: 'Number of packets in connection queue')
option('conn_max', type: 'integer', value: 8, description: 'Number of new connections on socket queue')
option('buffer_size', type: 'integer', value: 256, description: 'Bytes in each packet buffer')
option('buffer_count', type: 'integer', value: 15, description: 'Number of total packet buffers')
option('rdp_max_window', type: 'integer', value: 5, description: 'Max window size for RDP')
option('rtable_size', type: 'integer', value: 10, description: 'Number of elements in routing table')
