if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
  add_executable(csp_server_client EXCLUDE_FROM_ALL csp_server_client.c csp_server_client_posix.c)
  add_executable(csp_server EXCLUDE_FROM_ALL csp_server.c csp_server_posix.c)
  add_executable(csp_client EXCLUDE_FROM_ALL csp_client.c csp_client_posix.c)
  add_executable(csp_bridge_can2udp EXCLUDE_FROM_ALL csp_bridge_can2udp.c)
  target_include_directories(csp_server_client PRIVATE ${csp_inc})
  target_include_directories(csp_server PRIVATE ${csp_inc})
  target_include_directories(csp_client PRIVATE ${csp_inc})
  target_link_libraries(csp_server_client PRIVATE csp Threads::Threads)
  target_link_libraries(csp_server PRIVATE csp Threads::Threads)
  target_link_libraries(csp_client PRIVATE csp Threads::Threads)
  target_link_libraries(csp_bridge_can2udp PRIVATE csp)
endif()

add_executable(csp_arch EXCLUDE_FROM_ALL csp_arch.c)
target_include_directories(csp_arch PRIVATE ${csp_inc})
target_link_libraries(csp_arch PRIVATE csp)

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
  add_executable(zmqproxy EXCLUDE_FROM_ALL zmqproxy.c)
  target_include_directories(zmqproxy PRIVATE ${csp_inc} ${LIBZMQ_INCLUDE_DIRS})
  target_link_libraries(zmqproxy PRIVATE csp Threads::Threads ${LIBZMQ_LIBRARIES})
endif()
